[package]
name = "sdf_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { git = "https://github.com/maxbergmark/iced", features = [
    "wgpu",
    "image",
    "advanced",
    "svg",
    "tokio",
], branch = "fix/force_copy_src_0.15" }
iced_wgpu = { git = "https://github.com/maxbergmark/iced", branch = "fix/force_copy_src_0.15" }

wgpu = { version = "29.0.1", features = [] }
iced_glass = { git = "https://github.com/maxbergmark/iced_glass", branch = "feat/iced_0.15", features = [
    # "text",
] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
bytemuck = "1.25.0"
tracing = "0.1.44"
notosans = "0.1.0"
# typst = "0.14"
# typst-svg = "0.14"
# typst-as-lib = { version = "0.15", features = [
#     "typst-kit-fonts",
#     "typst-kit-embed-fonts",
# ] }

console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
